tests/fail/no-unimported-text-destructured.tsx
import { Text } from "@/components/ui/text";

function Example(props) {
    const { Text } = props;
    return <Text />;
}
